Make sure we send the correct events for Capslock, Shift, Ctrl, Alt and the Windows key
WebCore:

        Reviewed by Alexey.

        Make sure we send the correct events for Capslock, Shift, Ctrl, Alt and the Windows key

        * platform/win/KeyEventWin.cpp:
        (WebCore::keyIdentifierForWindowsKeyCode):
        (WebCore::PlatformKeyboardEvent::PlatformKeyboardEvent):

WebKit/win:

        Reviewed by Alexey.

        Allow Shift, Ctrl, Alt, Meta and Capslock keys to be sent into WebCore.

        * WebView.cpp:
        (WebView::keyDown):
        (WebView::keyUp):


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27375 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/win/ChangeLog
+++ b/WebKit/win/ChangeLog
@@ -1,3 +1,13 @@
+2007-11-01  Oliver Hunt  <oliver@apple.com>
+
+        Reviewed by Alexey.
+
+        Allow Shift, Ctrl, Alt, Meta and Capslock keys to be sent into WebCore.
+
+        * WebView.cpp:
+        (WebView::keyDown):
+        (WebView::keyUp):
+
 2007-11-01  Kevin McCullough  <kmccullough@apple.com>
 
         - Fixed a build failure
