Reviewed by Darin.
Include Cairo headers properly


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27377 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,14 @@
+2007-11-02  Alp Toker  <alp@atoker.com>
+
+        Reviewed by Darin.
+
+        Include Cairo headers properly
+
+        * platform/graphics/AffineTransform.h:
+        * platform/graphics/ImageBuffer.h:
+        * platform/graphics/cairo/AffineTransformCairo.cpp:
+        * platform/gtk/FontPlatformDataGtk.cpp:
+
 2007-11-01  Oliver Hunt  <oliver@apple.com>
 
         Reviewed by Alexey.
