--- a/WebKitSite/ChangeLog
+++ b/WebKitSite/ChangeLog
@@ -1,3 +1,14 @@
+2007-11-03  David D. Kilzer  <ddkilzer@webkit.org>
+
+        LGPL'ed files contain incorrect FSF address
+        <http://bugs.webkit.org/show_bug.cgi?id=14885>
+
+        Reviewed by NOBODY (follow-up fix).
+
+        * blog/wp-includes/class-snoopy.php:
+        * blog/wp-includes/gettext.php:
+        * blog/wp-includes/streams.php:
+
 2007-11-01  Sam Weinig  <sam@webkit.org>
 
         Rubber-stamped by Tim Hatcher.
