--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,11 @@
+2007-11-03  David D. Kilzer  <ddkilzer@webkit.org>
+
+        Sort files(...); sections of Xcode project files.
+
+        Rubber-stamped by Darin.
+
+        * JavaScriptCore.xcodeproj/project.pbxproj:
+
 2007-11-03  Maciej Stachowiak  <mjs@apple.com>
 
         Reviewed by Oliver.
