--- a/JavaScriptGlue/ChangeLog
+++ b/JavaScriptGlue/ChangeLog
@@ -1,3 +1,11 @@
+2007-11-03  David D. Kilzer  <ddkilzer@webkit.org>
+
+        Sort files(...); sections of Xcode project files.
+
+        Rubber-stamped by Darin.
+
+        * JavaScriptGlue.xcodeproj/project.pbxproj:
+
 2007-10-25  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Geoff.
