--- a/WebKit/ChangeLog
+++ b/WebKit/ChangeLog
@@ -1,3 +1,11 @@
+2007-11-03  David D. Kilzer  <ddkilzer@webkit.org>
+
+        Sort files(...); sections of Xcode project files.
+
+        Rubber-stamped by Darin.
+
+        * WebKit.xcodeproj/project.pbxproj:
+
 2007-11-02  Antti Koivisto  <antti@apple.com>
 
         Reviewed by Darin.
