--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-03  Mark Rowe  <mrowe@apple.com>
+
+        Gtk build fix.
+
+        * kjs/nodes.cpp:  Add missing include.
+
 2007-11-03  Darin Adler  <darin@apple.com>
 
         Reviewed by Maciej.
