--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,8 @@
+2007-11-03  Darin Adler  <darin@apple.com>
+
+        * pcre/pcre_compile.c: (check_escape): Windows build fix. Get rid of
+        C-incompatible declaration.
+
 2007-11-03  Mark Rowe  <mrowe@apple.com>
 
         Gtk build fix.
