wx <-> WebKit data type conversions for Pen and Color.
Reviewed by Darin Adler.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27414 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,13 @@
+2007-11-03  Kevin Ollivier  <kevino@theolliviers.com>
+
+        wx <-> WebKit data type conversions for Pen and Color.
+
+        Reviewed by Darin Adler.
+
+        * platform/graphics/wx: Added.
+        * platform/graphics/wx/ColorWx.cpp: Added.
+        * platform/graphics/wx/PenWx.cpp: Added.
+
 2007-11-03  Sam Weinig  <sam@webkit.org>
 
         Reviewed by Oliver.
