Reviewed by Sam.
        - remove NaN check from JSImmediate::fromDouble for 0.5% SunSpider speedup

        It turns out that doing this check costs more than it saves.
        
        * kjs/JSImmediate.h:
        (KJS::JSImmediate::fromDouble):



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27416 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,14 @@
+2007-11-03  Maciej Stachowiak  <mjs@apple.com>
+
+        Reviewed by Sam.
+        
+        - remove NaN check from JSImmediate::fromDouble for 0.5% SunSpider speedup
+
+        It turns out that doing this check costs more than it saves.
+        
+        * kjs/JSImmediate.h:
+        (KJS::JSImmediate::fromDouble):
+
 2007-11-03  Sam Weinig  <sam@webkit.org>
 
         Reviewed by Oliver.
