--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,13 @@
+2007-11-04  David D. Kilzer  <ddkilzer@webkit.org>
+
+        Fix build when spaces appear in the WebKit source path.
+
+        Reviewed by Mark Rowe.
+
+        * bindings/scripts/IDLParser.pm: Use safer open() method which lists
+        arguments individually and prevents the need to work around spaces
+        in the path.
+
 2007-11-04  Alp Toker  <alp@atoker.com>
 
         Reviewed by Alexey Proskuryakov.
